Ajout des pages billeterie et bilan carbone et ajout de metadata pour les recherches google

--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,17 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
 <head>
   <meta charset="utf-8">
   <title>MouetteStern</title>
   <base href="/">
+  <meta
+     name="description"
+     content="Site de la liste BDE MouetteStern, ici on rentre dans le saloon"
+  />
+  <meta
+  name="keywords"
+  content="MouetteStern,BDE,Centrale Nantes"
+/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
